--- a/devU-client/src/components/pages/forms/assignments/assignmentUpdatePage.scss
+++ b/devU-client/src/components/pages/forms/assignments/assignmentUpdatePage.scss
@@ -4,8 +4,7 @@
 .grid {
     display: grid;
     grid-template-columns: 0.3fr 1fr 0.5fr;
-    grid-template-rows: 1f
-    r 0.75fr;
+    grid-template-rows: 1fr 0.75fr;
     grid-column-gap: 10px;
     grid-row-gap: 10px;
     width: 100%;
